trying to fix phone img on safari

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -319,9 +319,8 @@ a:before, a:after {
 .solophone{
 	margin-top: 20px;
 	margin-bottom: 100px;
-	min-height: 40%;
+	height: auto;
 	min-width: 40%;
-	max-height: 50%;
 	max-width: 50%;
 	display: block;
 	margin-left: auto;
